--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
               <div class="rd-navbar-panel">
                 <!-- RD Navbar Toggle-->
                 <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-                <div class="rd-navbar-brand veil-lg"><a href="index.html" class="brand-name"><img style="margin-top: -7px;" width="128" height="24" src="images/logo-128x24.png" alt=""></a></div>
+                <div class="rd-navbar-brand veil-lg"><a href="index.html" class="brand-name">Cosmomaroc</a></div>
+                
                 <!-- RD Navbar Toggle-->
                 <button data-rd-navbar-toggle=".rd-navbar-collapse-wrap" class="rd-navbar-collapse veil-lg"><span></span></button>
               </div>
