--- a/single-member.html
+++ b/single-member.html
@@ -195,9 +195,15 @@
                   <p class="reveal-xs-inline-block offset-top-15 offset-xs-top-0 inset-xs-left-15"><a href="mailto:#" class="text-silver-chalice"><span style="font-size: 24px;" class="icon icon-xs material-icons-ico material-icons-email text-middle"></span><span class="text-middle inset-left-8">info@demolink.org</span></a></p>
                 </div>
                 <div class="offset-top-25">
-                  <p class="text-spacing-0">Motivated, dedicated, kind and professional makeup artist, Jessica Priston began her beauty career at a young age when she was hired for her first makeup job at age seventeen just after graduating from New York Makeup College.</p>
+                  <p class="text-spacing-0">Vernis sans Phatalate de dibutyle, Toluène, Formaldéhyde, ni Camphre.
+
+Chez Cosmomaroc, nous nous intéressons à vous fournir des produits de haute qualité, à un prix abordable, mais surtout en respectant les normes de santé.
+</p>
                   <div class="offset-top-15 offset-md-top-30">
-                    <p class="text-spacing-0">Her passion and aptitude for beauty have been clearly apparent her entire life and she chased her dreams of being a pro makeup artist to Los Angeles where she was trained at the prestigious Make-Up Designory. Upon completion of her professional training, Ms.Priston commenced her career working with professional photographers. Totally addicted to her job, you will find Jessica making the world a more beautiful place elbow deep in makeup, researching makeup, and experimenting with makeup.</p>
+                    <p class="text-spacing-0">
+Nous nous engageons à fournir des produits sans matières toxiques, en l'occurrence, nous n'utilisons PAS les matières suivantes: Le Phatalate de dibutyle, le Toluène, le Formaldéhyde, le Camphre.
+
+Nos produits ainsi ne laissent aucune trace après usage et nettoyage. À vous d'essayer!</p>
                   </div>
                 </div>
               </div>
