--- a/grid.html
+++ b/grid.html
@@ -37,109 +37,14 @@
               </div>
               <div class="rd-navbar-right-side">
                 <div class="rd-navbar-nav-wrap reveal-md-inline-block">
-                  <ul class="rd-navbar-nav">
+                <ul class="rd-navbar-nav">
                     <!-- RD Navbar Nav-->
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="about.html">About</a>
-                      <ul class="rd-navbar-dropdown">
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="history.html">History</a></li>
-                        <li><a href="single-member.html">About me</a></li>
-                        <li><a href="clients.html">Clients</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="services.html">Services</a>
-                      <ul class="rd-navbar-dropdown">
-                        <li><a href="services-1.html">Services</a></li>
-                        <li><a href="single-service.html">Single service</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="shop.html">Shop</a>
-                      <ul class="rd-navbar-dropdown">
-                        <li><a href="shop-grid.html">grid view</a></li>
-                        <li><a href="shop.html">list view</a></li>
-                        <li><a href="cart.html">cart page</a></li>
-                        <li><a href="featured-product.html">Featured Products</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="blog-classic-left-sidebar.html">News</a>
-                      <ul class="rd-navbar-dropdown">
-                        <li><a href="blog-classic-left-sidebar.html">classic blog</a>
-                          <ul class="rd-navbar-dropdown">
-                            <li><a href="blog-classic-left-sidebar.html">left sidebar</a></li>
-                            <li><a href="blog-classic-right-sidebar.html">right sidebar</a></li>
-                            <li><a href="blog-classic-both-sidebar.html">both sidebars</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="blog-grid-3-columns.html">grid blog</a>
-                          <ul class="rd-navbar-dropdown">
-                            <li><a href="blog-grid-1-column.html">1 column</a></li>
-                            <li><a href="blog-grid-2-columns.html">2 columns</a></li>
-                            <li><a href="blog-grid-3-columns.html">3 columns</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="blog-masonry-3-columns.html">masonry blog</a>
-                          <ul class="rd-navbar-dropdown">
-                            <li><a href="blog-masonry-1-column.html">1 column</a></li>
-                            <li><a href="blog-masonry-2-columns.html">2 columns</a></li>
-                            <li><a href="blog-masonry-3-columns.html">3 columns</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="blog-modern-left-side.html">modern blog</a>
-                          <ul class="rd-navbar-dropdown">
-                            <li><a href="blog-modern-left-side.html">left side</a></li>
-                            <li><a href="blog-modern-right-side.html">right side</a></li>
-                            <li><a href="blog-modern-left-sidebar.html">left sidebar</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="blog-single-post.html">Single Post</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="contacts.html">Contacts</a></li>
-                    <li class="active"><a href="#">Pages</a>
-                      <div class="rd-navbar-megamenu">
-                        <div class="row">
-                          <div class="col-md-4">
-                            <p class="text-extra-small text-uppercase text-bold font-accent text-primary veil reveal-md-block veil-tablet-md">elements</p>
-                            <ul>
-                              <li><a href="typography.html">Typography</a></li>
-                              <li><a href="tabs-accordions.html">Tabs & Accordions</a></li>
-                              <li><a href="progress-bars.html">Progress bars</a></li>
-                              <li><a href="pricing.html">Pricing</a></li>
-                              <li><a href="forms.html">Forms</a></li>
-                              <li><a href="buttons.html">Buttons</a></li>
-                              <li><a href="grid.html">Grid</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-4">
-                            <p class="text-extra-small text-uppercase text-bold font-accent text-primary veil reveal-md-block veil-tablet-md">pages 1</p>
-                            <ul>
-                              <li><a href="services-1.html">Services</a></li>
-                              <li><a href="single-service.html">Single Service</a></li>
-                              <li><a href="makeup-tools.html">Makeup tools</a></li>
-                              <li><a href="masterclasses.html">Masterclasses</a></li>
-                              <li><a href="single-masterclass.html">Single Masterclass</a></li>
-                              <li><a href="maintenance.html">Maintenance (Under Construction)</a></li>
-                            </ul>
-                          </div>
-                          <div class="col-md-4">
-                            <p class="text-extra-small text-uppercase text-bold font-accent text-primary veil reveal-md-block veil-tablet-md">pages 2</p>
-                            <ul>
-                              <li><a href="404.html">404 page</a></li>
-                              <li><a href="503.html">503 page</a></li>
-                              <li><a href="coming-soon.html">Coming Soon</a></li>
-                              <li><a href="login.html">Login Page</a></li>
-                              <li><a href="register.html">Register Page</a></li>
-                              <li><a href="search-results.html">Search Results</a></li>
-                              <li><a href="site-map.html">Site Map</a></li>
-                              <li><a href="privacy.html">Privacy Policy</a></li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
+                    <li class="active"><a href="index.html">Accueil</a></li>
+                    <li><a href="portfolio.html">Produits</a></li>
+                    <!--<li><a href="shop-grid.html">grid view</a></li>-->
+                    <li><a href="contacts.html">Contact</a></li>
+                    <li><a href="coming-soon.html">Coming Soon</a></li>
+                        
                   </ul>
                 </div>
                         <div class="rd-navbar-collapse-wrap reveal-md-inline-block">
