--- a/Poudre_compacte.html
+++ b/Poudre_compacte.html
@@ -39,8 +39,8 @@
                 <div class="rd-navbar-nav-wrap reveal-md-inline-block">
                   <ul class="rd-navbar-nav">
                     <!-- RD Navbar Nav-->
-                    <li class="active"><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Produits</a>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li class="active"><a href="#">Produits</a>
                           <ul class="rd-navbar-dropdown">
                             <li><a href="vernis_a_ongles_foxy_fox.html">Vernis à ongles Foxy-Fox</a></li>
                             <li><a href="vernis_a_ongles_nancy.html">Vernis à ongles Nancy</a></li>
