--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <div class="cell-sm-6 offset-top-30 offset-sm-top-0">
                 <!-- Post Inspiration-->
                 <div class="post-inspiration post-inspiration-img-auto-height">
-                  <div class="post-inspiration-img-wrap"><img src="images/products/pd/2.jpg" width="585"
+                  <div class="post-inspiration-img-wrap"><img src="images/products/pd/2.JPG" width="585"
                       height="427" alt=""></div>
                   <div class="post-inspiration-body">
                     <div class="offset-top-20">
