--- a/fond_de_teint_compact.html
+++ b/fond_de_teint_compact.html
@@ -159,7 +159,7 @@ function setLangStyles(lang) {
               
             </div>
             <div class="offset-top-40">
-              <h4 class="text-spacing-inverse-50" lang="fr">La poudre compacte Foxy-Fox enrichie en vitamine E pour matifie la peau d'une façon uniforme au sens de la perfection.</h4>
+              <h4 class="text-spacing-inverse-50" lang="fr">Le fond de teint compacte Foxy-Fox enrichie en vitamine E pour matifie la peau d'une façon uniforme au sens de la perfection.</h4>
               <h4 class="text-spacing-inverse-50" lang="en">The Foxy-Fox compact powder enriched with vitamin E mattifies the skin in a uniform way in the sense of perfection.</h4>
 
               <div class="range range-xs-center offset-top-44 offset-md-top-53 text-sm-left">
