--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ function setLangStyles(lang) {
 				        <div class="post-inspiration ">
                   <div class="post-inspiration-img-wrap"><img src="images/homepage/DSC_4509.jpg" width="485" height="527" alt=""></div>
                   <div class="post-inspiration-body">
-                      <h5 class="text-spacing-0"><a href="vernis_a_ongles_foxy_fox.html" class="text-white">Vernis à ongles Foxy-Fox</a></h5>
+                      <h5 class="text-spacing-0"><a href="vernis_a_ongles_foxy_fox.html" class="text-white">Foxy-Fox</a></h5>
                   </div>
                 </div>
               </div>
@@ -231,7 +231,7 @@ function setLangStyles(lang) {
                 <div class="post-inspiration ">
                   <div class="post-inspiration-img-wrap"><img src="images/homepage/DSC_4495.jpg" width="485" height="527" alt=""></div>
                 <div class="post-inspiration-body">
-                      <h5 class="text-spacing-0"><a href="foxy_fox_fast.html" class="text-white">Foxy-Fox Fast<</a></h5>
+                      <h5 class="text-spacing-0"><a href="foxy_fox_fast.html" class="text-white">Foxy-Fox Fast</a></h5>
                   </div>
                 </div>
               </div>
