--- a/nailart.html
+++ b/nailart.html
@@ -95,7 +95,6 @@ function setLangStyles(lang) {
 							<li><a href="nailart.html">Nail art</a></li>
                             <li><a href="mascara.html">Mascara</a></li>
                             <li><a href="glosses_a_levres_foxy_fox.html">Glosses à Lèvres Foxy-Fox</a></li>
-                            <li><a href="fond_de_teint_compact.html">Fond de teint compact</a></li>
                             <li><a href="fond_de_teint_liquide.html">Fond de teint liquide</a></li>
                             <li><a href="Poudre_compacte.html">Poudre compacte</a></li>
                             <li><a href="Fard_a_joues.html">Fard à joues</a></li>
@@ -162,8 +161,8 @@ function setLangStyles(lang) {
               
             </div>
             <div class="offset-top-40">
-              <h4 class="text-spacing-inverse-50" lang="fr">NAIL ART Foxy-Fox unifie précision et élégance, en plus, il sèche instantanément.</h4>
-               <h4 class="text-spacing-inverse-50" lang="en">Foxy-Fox NAIL ART unites precision and elegance, in addition, it dries instantly.</h4>
+              <h4 class="text-spacing-inverse-50" lang="fr">NAIL ART Foxy-Fox, précis et élégant, en plus, il sèche instantanément.</h4>
+               <h4 class="text-spacing-inverse-50" lang="en">Foxy-Fox NAIL ART precise and elegant, in addition, it dries instantly.</h4>
               <div class="range range-xs-center offset-top-44 offset-md-top-53 text-m-left">
                 
                   <div class="cell-sm-6 cell-md-4 offset-top-60">
